# vcos_kernel_nuttx

./: CMakeLists.txt  DISCLAIMER.md  Kconfig  LICENSE  README_VCOS.md
arch/: Kconfig
arch/arm/: Kconfig
arch/arm64/: Kconfig
arch/rh850/: CMakeLists.txt  Kconfig
arch/rh850/src/u2ax/: CMakeLists.txt  Make.defs  Toolchain.defs  chip.h  u2ax_timerisr.c
arch/rh850/src/u2ax/u2a16icum/: CMakeLists.txt  Make.defs  startup.S  u2a16icum.h  u2a16icum_main.c  u2a16icum_ostm.h  u2a16icum_pll.c  u2a16icum_systimer.c
arch/sim/: Kconfig
arch/tricore/: Kconfig
binfmt/: binfmt_globals.c  builtin.c
boards/: Kconfig
cmake/: nuttx_add_library.cmake  nuttx_generate_sim_ld.cmake
drivers/: Kconfig
drivers/mbox/: CMakeLists.txt  Kconfig  Make.defs  mbox.c  pl320.c
drivers/note/: CMakeLists.txt  Kconfig  note_driver.c  note_handshake.c  note_initialize.c  noteddr_driver.c
drivers/pipes/: Kconfig
drivers/rpmsg/: CMakeLists.txt  Kconfig  rpmsg.c  rpmsg_echo.c  rpmsg_echo.h
drivers/serial/: CMakeLists.txt  Kconfig  Make.defs  serial.c  serial_knsh.c  uart_16550.c  uart_pl011.c
drivers/syslog/: CMakeLists.txt  Kconfig  Make.defs  ramlog.c  syslog.h  syslog_channel.c  syslog_intbuffer.c  syslog_write.c  vsyslog.c
drivers/timers/: CMakeLists.txt  Kconfig  Make.defs  arch_alarm.c  arch_timer.c  watchdog.c  wdt_notifier.c
fs/: fs_initialize.c
include/: assert.h  debug.h  pthread.h  stdio.h
openamp/: 0015-lib-remoteproc-modify-the-variable-type-of-the-vring.patch  open-amp.cmake  open-amp.defs
sched/: Kconfig  Makefile
tools/: Config.mk  incdir.c  mkdeps.c
(+295 files in other folders)
